Mon Apr 30 12:38:15 2001  Brian Gough  <bjg@network-theory.co.uk>

	* poly.c: moved poly_eval function into poly/ directory

Wed Apr 25 17:28:48 2001  Brian Gough  <bjg@network-theory.co.uk>

	* trig.c (gsl_sf_polar_to_rect): dropped _e from polar/rect
 	conversion functions

Tue Apr 24 17:05:22 2001  Brian Gough  <bjg@network-theory.co.uk>

	* split out chebyshev functions into their own cheb/ directory,
 	leaving behind an internal cheb struct and cheb evaluation
 	function.

Mon Apr 23 10:21:06 2001  Brian Gough  <bjg@network-theory.co.uk>

	* changed tests for EFAULT into a commented-out macro, since
 	EFAULT should only apply to invalid non-null pointers, but it
 	might be useful to keep the tests around for debugging in this
 	directory.

	* unified error handling conventions to _e for error handling
 	functions and no suffix for plain functions, so _impl functions
 	are no longer needed.

1999-08-02  Mark Galassi  <rosalia@lanl.gov>

	* fermi_dirac.c: took out the use of some "const int" constants
	which were being used to size arrays, since this is not portable
	(thanks to Bernd Petrovitsch <bernd@ict.tuwien.ac.at> for pointing
	this out).

1999-01-02  Mark Galassi  <rosalia@cygnus.com>

	* trig.c (gsl_sf_rect_to_polar_impl): introduced an #ifdef
	HAVE_HYPOT for systems that do not have the hypot() routine.

Sun Feb 14 20:59:50 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* Makefile.am (include_HEADERS): added gsl_sf_result.h

1998-12-05  Mark Galassi  <rosalia@cygnus.com>

	* Makefile.am: t-erf.c was commented out, which is a problem
	(pointed out by automake-1.3b).  Moved the commented-out t-erf.c
	line to the end of the long list of files.

	* legendre_poly.c (gsl_sf_legendre_Pl_impl):
	* legendre_con.c (gsl_sf_conicalP_xgt1_neg_mu_largetau_impl):
	added an ugly fix to the invocation of gsl_sf_bessel_Jn_impl() to
	give it two bogus arguments so that it builds.  I hope Jerry fixes
	it up soon!
