@@ -88,14 +88,14 @@ These routines compute the derivative of the scaled Airy function
 
 @subsection Zeros of Airy Functions
 
-@deftypefun double gsl_sf_airy_zero_Ai (int @var{s})
-@deftypefunx int gsl_sf_airy_zero_Ai_e (int @var{s}, gsl_sf_result * @var{result})
+@deftypefun double gsl_sf_airy_zero_Ai (unsigned int @var{s})
+@deftypefunx int gsl_sf_airy_zero_Ai_e (unsigned int @var{s}, gsl_sf_result * @var{result})
 These routines compute the location of the @var{s}-th zero of the Airy
 function @math{Ai(x)}.
 @end deftypefun
 
-@deftypefun double gsl_sf_airy_zero_Bi (int @var{s})
-@deftypefunx int gsl_sf_airy_zero_Bi_e (int @var{s}, gsl_sf_result * @var{result})
+@deftypefun double gsl_sf_airy_zero_Bi (unsigned int @var{s})
+@deftypefunx int gsl_sf_airy_zero_Bi_e (unsigned int @var{s}, gsl_sf_result * @var{result})
 These routines compute the location of the @var{s}-th zero of the Airy
 function @math{Bi(x)}.
 @end deftypefun
@@ -103,14 +103,14 @@ function @math{Bi(x)}.
 
 @subsection Zeros of Derivatives of Airy Functions
 
-@deftypefun double gsl_sf_airy_zero_Ai_deriv (int @var{s})
-@deftypefunx int gsl_sf_airy_zero_Ai_deriv_e (int @var{s}, gsl_sf_result * @var{result})
+@deftypefun double gsl_sf_airy_zero_Ai_deriv (unsigned int @var{s})
+@deftypefunx int gsl_sf_airy_zero_Ai_deriv_e (unsigned int @var{s}, gsl_sf_result * @var{result})
 These routines compute the location of the @var{s}-th zero of the Airy
 function derivative @math{Ai'(x)}.
 @end deftypefun
 
-@deftypefun double gsl_sf_airy_zero_Bi_deriv (int @var{s})
-@deftypefunx int gsl_sf_airy_zero_Bi_deriv_e (int @var{s}, gsl_sf_result * @var{result})
+@deftypefun double gsl_sf_airy_zero_Bi_deriv (unsigned int @var{s})
+@deftypefunx int gsl_sf_airy_zero_Bi_deriv_e (unsigned int @var{s}, gsl_sf_result * @var{result})
 These routines compute the location of the @var{s}-th zero of the Airy
 function derivative @math{Bi'(x)}.
 @end deftypefun
